--- a/manage/pmp/12-采购.md
+++ b/manage/pmp/12-采购.md
@@ -1,363 +1,13 @@
-
-
 # PMP 第12章  项目采购管理 试题 及解析_爱随风来_新浪博客 http://blog.sina.com.cn/s/blog_75cd9f870100vk1d.html
-
-1，以下关于固定总价合同的说法，正确的是(    )。
-  A.价格完全固定，不允许调整，以便卖方承担工作范围变更的风险
-  B.买方不需要准确定义所需采购的产品或服务
-  C.买方承担因合同履行不好而导致的成本增加
-  D.如果工作范围发生变化，则可以调整合同价格
-2.以下都是合同提前终止的原因，除了(    )。
-  A.双方协商一致    B.买方为了自己的便利     C.一方违约       D.项目完工
-3.采购文件中应该包括(    )。
-  A.所需的合同条款     B.初步估计的合同价格      C.详细的施工方法     D.详细的进度计划
-4.在成本补偿合同下，买方为卖方报销合同工作实施的一切可列支成本，并支付一定的费用作为卖方的(  )。
-  A.管理费    B.固定成本    C.间接成本      D.利润
-5.项目采购管理是围绕以下哪项进行的?(    )
-  A.采购文件       B.建议书        C.合同        D.建议邀请书
-6.在规划采购过程中，经常需要从外部寻求以下各种专家的专家判断(    )。
-  A.采购专家、法律专家、技术专家            B.管理专家、法律专家、技术专家
-  C.采购专家、管理专家、技术专家            D.采购专家、法律专家、管理专家
-7.投标人会议通常在什么时候举行?(    )
-  A.规划采购阶段    B.实施采购阶段          C.卖方选择阶段       D.管理采购阶段
-8.根据买方在项目采购圈中的不同位置，买方也可以称为以下各项，除了(    )。
-  A.雇主(Client)    B.承包商(ContraCtor)    C.客户(Customer)     D.投标人(Bidder)
-9.从买方的角度分析，对于固定价格合同，买方最重要的工作是什么?(    )
-  A.确定合同总价                                B.处理合同执行过程中的变更
-  C.定义被采购产品或服务的范围                  D.监督卖方控制成本的积极性
-10.以下关于工料合同的说法都是正确的，除了(    )。
-  A.工料合同是一种混合类型合同，既有成本补偿合同的特点，也有总价合同的特点
-  B.按卖方的实际成本给予付款，外加一定的利润
-  C.买方没有明确规定合同的总价值
-  D.在合同授予时，采购的准确数量没有明确规定
-11.你已经发出了建议邀请书，潜在供应商有一些疑问。你决定开一次会来澄清工作说明书，以便每个人都能理解。你此时正处在下列哪个阶段?(    )
-  A.规划采购    B.实施采购    C.管理采购    D.结束采购
-12.你和你的团队正在与你的供应商结束一项合同，证明合同已经完成的正式书面通知是由谁来发布?(  )
-  A.买方的高级管理层    B.买方的项目团队      C.买方的采购管理员    D.项目发起人
-13.一般来说，准备建议书的成本(    )。
-  A.不直接向买方收取任何费用
-  B.如果买方不与卖方交易，对买方而言就成了直接成本
-  C.如果买方与卖方交易，对买方而言就成了直接成本
-  D.不论买方与卖方交易与否，对买方而言就成了直接成本
-14.你们正处于编制采购文件的过程中。如果打算以价格为基础来选择卖方，那么采购文件可以使用下列名称，除了(    )。
-  A.投标邀请书    B.报价邀请书    C.建议邀请书    D.投标通知
-15.以下哪个文件中会包含关于合同所需产品或服务的详细属性?(    )
-  A.工作说明书(SOW)    B.项目章程  C.工作分解结构(WBS)    D.范围管理计划
-16.以下关于采购工作说明书的说法都是正确的，除了(    )。
-  A.详细描述拟采购的对象，以便潜在卖方确定他们是否有能力提供
-  B.详细描述拟采购的对象，以便为潜在卖方提供一个统一的报价基础
-  C.为了保证采购工作的严肃性，采购工作说明书一旦发出，就不能更改
-  D.每次进行采购，都需要编制采购工作说明书
-17.采购审计(  )。
-  A.识别卖方工作流程或可交付成果中的不足之处
-  B.识别项目活动是否符合组织和项目的相关方针、方法及流程
-  C.检查风险应对措施在处理已识别风险及其根源方面的有效性
-  D.对从规划采购到管理采购的所有采购过程进行结构化审查
-18.如果潜在卖方的报价明显低于买方的独立估算，则可能表明以下所有，除了(    )。
-  A.潜在卖方没有全面响应采购工作说明书           B.潜在卖方误解了采购工作说明书
-  C.采购工作说明书有缺陷                         D.如果该潜在卖方中标，就可以为买方节约大量成本
-19.以下各项都是规划采购过程的输出，除了(    )。
-A.采购管理计划    B.采购文件    C.建议书    D．供方选择标准
-20.结束采购的输入包括(    )。
-A.采购文件    B.采购文档    C.建议书      D.合同
-21.通常，买方比较喜欢的合同类型是(    )。
-A.固定总价合同    B.成本补偿合同    C.单价合同     D.工料合同
-22.你正在考虑向新客户提供有偿咨询服务，这种情况下你的风险最低的合同类型是(    )。
-A.固定总价合同    B.工料合同    C.成本加固定费用合同    D.成本加激励费用合同
-23.某项目采用成本加固定费用合同。合同中规定的目标成本为100000美元，并按10％提取利润。合同实施结束时，实际成本是110000美元，那么最终的合同价格是多少?(    )
-A.120000美元    B.121000美元    C.110000美元    D.算不出来
-24.采购审计的主要目的是(    )。
-A.验证卖方工作过程或可交付物的一致性           B.审查采购过程的有效性，以便对相关人员给予奖惩
-C.鉴别可供以后采购借鉴的经验教训               D.确定合同双方是否认真履行了各自义务
-25.实施采购过程包括下列所有工作，除了(    )。
-A.编制采购文件          B.获取卖方建议书       C.建议书评价        D.确定中标者并授予合同
-26.可以在总价合同中加入经济价格调整条款，以便应对(    )。
-A.工作范围变更的风险    B.现场条件变化的风险   C.通货膨胀的风险    D.生产效率低下的风险
-27.项目出项了一个紧急情况，你立即需要一名合同管理专家为你提供咨询服务，在这种情况下，你可能使用下列哪种合同?(    )
-A.固定总价合同       B.总价加激励费用合同       C.总价加经济价格调整合同      D.工料合同
-28.在成本加奖励费用合同下，买方为卖方报销一切合法成本，并且(    )。
-A.向卖方支付一笔固定的费用
-B.就成本节约部分，按事先确定的分享比例，与卖方分享
-C.基于买方对卖方绩效的主观判断，向卖方支付利润
-D.在不超过最高限额的情况下，按合理标准向卖方支付利润
-29.供方选择标准是以下哪个文件的一个组成部分?(    )
-A.采购工作说明书  B.采购文件    C.建议邀请书    D.建议书
-30.下列各项都是合同变更控制系统的组成部分，除了(    )。
-A.变更批准层次    B.跟踪系统          C.争议处理程序      D.哪些合同变更不需要书面文件
-31.以下都是规划采购过程的输入，除了(    )。
-A.范围基准        B.合作协议          C.应用领域          D.活动资源需求
-32.常用的合同种类包括以下所有，除了(    )。
-  A.总价合同        B.成本补偿合同      C混合型工料合同     D.价格调整合同
-33.作为管理采购的输入之一，批准的变更请求包括(    )。
-  A.根据新发布的法规，对合同可交付成果的质量标准的修改
-  B.根据买方意见，卖方对本月付款申请书的修改
-  C.根据经济价格调整条款，对合同价格的修改
-  D.买方单方面决定的对付款时间的推迟
-34.供方选择标准(  )。
-  A.通常在实施采购过程中制定
-  B.必须是客观的标准
-  C.通常局限于价格
-  D.可以用包括价格在内的多种标准对卖方建议书进行打分
-35一名新项目经理即将第一次参加投标人会议。他向你询问关于投标人会议的注意事项。
-  你可以给他的最好建议是(    )。
-  A限制参会者提问的次数，防止少数人问太多的问题
-  B.防止参会者私下向买方提问，因为他们可能不愿意当着竞争对手的面提问
-  C.项目经理不需要参加投标人会议，只需采购管理员参加
-  D.设法获得每个参会者的机密信息
-36.以下哪个是结束采购过程的输入?(    )
-  A.合同(Contract)
-  B.采购文件(Procurement Documents)
-  C.采购文档(Procurement Documentation)
-  D合同往来函件(Contract Correspondence)
-37.质量审计、风险审计和采购审计，虽然分属不同的知识领域，但都具有一个共同点(    )。
-  A.都属于执行过程组    B.都属于监控过程组     C.都属于收尾过程组    D.都涉及经验教训总结
-38.资源日历是以下哪个过程的输出?(    )
-  A.估算资源需求      B.实施采购      C.制订进度计划    D.制订人力资源计划
-39.成本补偿合同的特点是(    )。
-  A.买方向卖方支付实际成本，外加一笔管理费用
-  B.买方向卖方支付实际成本，外加一笔利润
-  C.买方向卖方支付实际成本，外加一笔杂项费用
-  D.买方向卖方支付实际成本，外加一笔奖金
-40.在哪种合同下，买方最需要准确地定义拟采购的产品、服务或成果?(    )
-  A.总价合同    B.单价合同    C.工料合同    D.成本补偿合同
-参考答案及解析
-1.A.价格固定的前提条件是：工作范围不变。如果工作范围变了，通常可调整合同价格。
-  B.要使用固定总价合同，买方必须准确定义所要采购的产品或服务。
-  C.买方承担工作范围变更引起的成本增加，但是，合同履行不好(如卖方成本控制不力)导致的成本增加，应该由卖方承担。
-  D.正确答案。工作范围发生了变更，可以相应调整合同价格。
-  参见：PMBOKR指南第322页，解读第221页。
-  考点与答题技巧：固定总价合同。
-2.A.在合同工作完成前，双方可协商一致结束合同。
-  B.买方可以仅仅为了自己的便利，而宣布提前解除合同。这种情况下，买方应给予卖方相应的赔偿。
-  C.尽管并不是任何违约都会导致合同提前终止，但是重大违约的确会导致合同提前终止。当然，对什么是重大违约，没有统一的客观标准。
-  D.正确答案。项目完工不属于提前终止，而是合同正常终止。
-  参见：PMBOKR指南第342页。
-  考点与答题技巧：合同提前终止的原因。
-3.A.正确答案。所需的合同条款应该包括在采购文件中，表示将来所签的合同中应该包括的条款。
-  B.合同价格应该是由潜在卖方根据采购文件估算的价格，不应该出现在采购文件中。
-  C.详细的施工方法由潜在卖方提供，在采购文件中只会出现总体项目要求。
-  D.详细的进度计划由潜在卖方在投标书中提供，在采购文件中只能规定里程碑的实现日期和整个项目的完工日期。
-  参见：PMBOKR指南第326页，解读第227页。
-  考点与答题技巧：采购文件的内容。
-4.A.成本补偿合同下的“费用(Fee)”包括除可报销成本以外的一切费用和利润，其中主要是利润。卖方的管理费通常是可报销成本。
-  B.固定成本通常是可报销成本。
-  C.间接成本通常是可报销成本。
-  D.正确答案。买方向卖方支付这部分费用，作为卖方的利润。在成本加固定费用合同下，这部分费用是固定的；在成本加激励费用合同下，按合同中规定的方法计算这部分费用；而在成本加奖励费用合同下，这部分费用完全取决于买方的主观意愿。
-  参见：PMBOKR指南第323页，解读第221～222页。
-  考点与答题技巧：成本补偿合同。
-5.A.采购文件用于征求潜在卖方的建议书，是规划采购过程输出之一，是签订合同的基础之一。在招投标中，采购文件就是招标文件。
-  B.建议书是潜在卖方为与买方签订合同而发出的要约，在招投标中，是投标文件。
-  C.正确答案。采购管理是围绕合同展开的。在合同签订之前的工作，都是为了签合同；在合同签订之后，则是执行和管理合同；最后，需要对合同进行收尾。
-  D.建议邀请书是采购文件的代名词。也可以说建议邀请书是采购文件的一种。
-  参见：PMBOKR指南第315页，解读第216页。
-  考点与答题技巧：项目采购管理与合同。
-6 A.正确答案。在规划采购过程中，往往需要寻求各种专家的协助，如合同专家、采购专家、法律专家和技术专家，以保证规划采购工作的质量。
-  B.项目经理本身就应该是管理专家。
-  C.同上。
-  D.同上。
-  参见：PMBOKR指南第315页。
-  考点与答题技巧：外部专家对规划采购过程的支持。
-7 A.规划采购阶段尚没有投标人。
-  B.正确答案。实施采购过程中，召开投标人会议来澄清潜在卖方对采购文件的疑问，并使潜在卖方有机会考察现场。投标人会议是在潜在卖方购买采购文件之后、正式投标之前，由买方召集的一个正式会议。
-  C.在PMBOKR指南中不存在卖方选择阶段。卖方选择是在实施采购过程中完成的。
-  D.管理采购是在合同签订以后进行的，此时，中标的投标人已经成为真正的卖方。
-  参见：PMBOKR指南第331页，解读第228页。
-  考点与答题技巧：实施采购过程与投标人会议。
-8.A.这是对买方的称呼。采购过程中，雇主通过支付金钱获得产品、服务或成果。
-  B.承包商也会成为买方，承包商也需要支付金钱从外部购买产品或服务，如采购施工材料和施工人员。
-  C.客户是对买方的称呼，在采购过程中，客户负责支付金钱，卖方负责提供产品或服务。
-  D.正确答案。投标人是潜在的卖方。
-  参见：PMBOKR指南第316页，解读第216页。
-  考点与答题技巧：在项目采购管理中，对买方的其他称呼。
-9 A.合同总价不是由买方单方面确定的。
-  B.采用固定总价合同的项目，通常工作范围清楚明确，合同执行中的变更就很少。
-  C.正确答案。只有工作范围非常清楚的采购，才能用固定总价合同。
-  D.在固定总价合同下，卖方有很高的积极性控制项目成本，不需买方监督。
-  参见：PMBOKR指南第322页。
-  考点与答题技巧：固定总价合同。
-10.A.工料合同按项目工作所花费的实际工时数和材料数，按事先确定的单位工时费用标准和单位材料费标准进行付款。从工作量上讲，工料合同具有成本补偿合同的特点；从单价固定上讲，工料合同具有总价合同的特点。
-  B.正确答案。这是成本补偿合同。
-  C.由于工作量是放开的，所以无法明确规定合同的总价。
-  D.由于缺少准确的工作说明书，采购的数量也就没有准确规定。
-  参见：PMBOKR指南第324页，解读第222页。
-  考点与答题技巧：工料合同。
-11 A.规划采购阶段，买方还未与潜在供应商接触。
-  B.正确答案。实施采购过程是获取卖方应答、选择卖方并授予合同的过程，其中要使用投标人会议这个工具。题中所描述的现象是召开投标人会议。
-  C管理采购是以已签订的合同为基础的，而题目中的情况是还没有签订合同。
-  D.合同还未正式签订，更未进入结束采购过程。
-  参见：PMBOKR指南第331页，解读第228页。
-  考点与答题技巧：投保人会议与实施采购过程。
-12 A.通常不由买方的高级管理层来发出合同关门的通知。
-  B这个选项太笼统，面太宽。
-  C.正确答案。买方通常授权其采购管理员向卖方发出合同关门的通知。采购管理员可以是项目经理或项目团队中的其他人。
-  D.项目发起人是项目的出资者。
-  参见：PMBOKR指南第344页，解读第234页。
-  考点与答题技巧：谁向卖方签发关于合同关门的书面通知。
-13.A.正确答案。潜在卖方编制建议书(投标文件)所花费的成本，无论中标与否，均不向买方直接收取。
-  B.潜在卖方编制建议书(投标文件)所花费的成本，无论中标与否，均不向买方直接收取。
-  C.同上。
-  D.同上。
-  参见：PMBOKR指南第330页。
-  考点与答题技巧：卖方建议书。
-14.A.投标邀请书用于同时考虑价格和技术的采购。
-  B报价邀请书用于以价格为主要评价标准的采购。
-  C正确答案。建议邀请书用于以技术方案为主要评价标准的采购。
-  D.投标通知是投标邀请书的代名词。
-  参见：PMBOKR指南第326页，解读第226～227页。
-  考点与答题技巧：采购文件的不同名称。
-15.A.正确答案。采购工作说明书中会规定拟采购的产品或服务的详细属性。
-  B.项目章程中不涉及拟采购产品或服务的详细属性。
-  C.工作分解结构中会包括拟采购的产品或服务，但没有详细属性。
-  D.范围管理计划是关于如何管理项目范围的计划，并不包括合同所需产品或服务的详细属性。
-  参见：PMBOKR指南第325页，解读第96页。
-  考点与答题技巧：采购工作说明书。
-16.A.采购工作说明书旨在详细定义拟采购的产品或服务，便于潜在卖方据此能评估自己是否有能力提供。
-  B.各潜在卖方都根据同样的采购工作说明书来报价，他们的报价之间才具有可比性。
-  C.正确答案。采购工作说明书发出后，在签订合同前，买方可以对其进行修改、补充和完善。
-  D这是由采购工作说明书的本质决定的，任何采购都需要采购工作说明书。但是，采购工作说明书的繁简可以不同。
-  参见：PMBOKR指南第326页，解读第96页。
-  考点与答题技巧：采购工作说明书。在以前的PMBOKR指南第3版中，叫“合同工作说明书”。在规划采购过程中，买方首先制定自制或购买决策，再对需要外购的部分编制采购工作说明书、采购文件和供方选择标准。广义上的采购文件中，包括采购工作说明书和供方选择标准。
-17.A.不全面。(1)采购审计也需要审查买方的采购工作，(2)采购审计不仅仅是审查不足之处。
-  B.面太宽。采购审计只针对采购活动。
-  C.这是风险审计，不是采购审计。
-  D.正确答案。采购审计旨在对规划、实施和管理采购过程进行结构化审查，来总结经验教训，以改进将来的采购工作。
-  参见：PMBOKR指南第343页。
-  考点与答题技巧：采购审计。
-18.A.有可能。双方估算的基础是相同的，差距可能来源于潜在卖方没有完全响应采购工作说明书，即某些工作没有被估算。
-  B.有可能。卖方可能误解采购工作说明书所规定的工作。
-  C.有可能。采购工作说明书可能存在缺陷，如对产品性能、质量等说明不够详细，导致双方的理解不一致，从而导致差距。
-  D.正确答案。在弄清楚卖方报价低的原因之前，不能如此简单地下结论。如果该潜在卖方中标，不一定能为买方节约成本，甚至可能使项目不能顺利进行。如果买方使用独立估算的建议书评价技术，就说明买方对自己的估算很自信，所以就应该选择最接近独立估算的报价中标。
-  参见：PMBOKR指南第332页。
-  考点与答题技巧：独立估算技术。
-19.A.这是规划采购过程的输出之一，它描述了如何管理从编制采购文件直到合同收尾的各个采购过程。
-  B.这是规划采购过程的输出之一，但是在具体应用中，不同类型的采购文件有不同的常用名称。
-  C.正确答案。建议书是由潜在卖方根据采购文件编写并提交的，是实施采购的输入之一。由于PMBOKR指南中的采购管理是从买方的角度来写的，所以它没有把建议书列作一个输出。从时间上讲，建议书是在实施采购阶段形成的。
-  D.这是规划采购过程的输出之一，通常是采购文件的一部分，制定标准的目的是为了对卖方建议书进行评级或打分。在招投标中，就是评标标准。
-  参见：PMBOKR指南第324～328页，解读第223页。
-  考点与答爱技巧：规划采购过程的输出。
-20.A.采购文件用于征求潜在卖方的建议书，是规划采购过程的输出之一，并用于实施采购过程。当然，采购文件是采购文档的一部分。
-  B.正确答案。为了结束合同，需要收集全部采购文档，并建立索引和加以归档。
-  C.建议书是卖方准备的，它是实施采购的输入，不是结束采购的输入。当然，建议书是采购文档的一部分。
-  D.合同是管理采购的输入。当然，合同是采购文档的一部分。
-  参见：PMBOKR指南第343页。
-  考点与答题技巧：结束采购过程的输入。遇到采购文档或采购文件的题目，一定要看英文原文，因为这两个词可能反过来翻译。采购文档是Procurement Documentation，采购文件是Procurement Documents。完整的采购文档中包括：采购文件、建议书、合同，以及合同执行和管理中所产生的全部函件。
-21.A.正确答案。在固定总价合同下，买方基本没有成本风险。
-  B.买方一般不喜欢成本补偿合同，因为买方承担几乎全部成本风险。
-  C.单价合同不是PMBOKR指南中提到的合同类型。
-  D.工料合同既有总价合同的特点，也有成本补偿合同的特点，买方承担中度的成本风险，即工作量变动的风险。
-  参见：PMBOKR指南第322页，解读第221页。
-  考点与答题技巧：合同类型与固定总价合同。
-22.A.你是卖方，在固定总价合同下，成本风险最高。
-  B.作为卖方，工料合同下，需要承担工料单价的风险。
-  C.正确答案。成本补偿合同下，卖方的成本风险最低。成本加固定费用合同的风险比成本加激励费用合同更低。
-  D.在成本加激励费用合同下，卖方有一定的利润风险(机会和威胁)。
-  参见：PMBOKR指南第323页，解读第221～222页。
-  考点与答题技巧：合同种类与风险分担。注意：此题假设你是卖方。采购管理的题目，如果没有特别指明，就是从买方的角度来问的。
-23.A.正确答案。120000=110000+100000*10％
-  B.在成本加固定费用合同，费用不能随实际成本变化。
-  C.合同价格应该大于实际成本数。
-  D.可以算出来。
-  参见：PMBOKR指南第323页。
-  考点与答题技巧：合同价格的计算。
-24.A.这不是采购审计的目的，而是管理采购过程中的工作。
-  B.采购审计不是要对相关人员进行奖惩，而是总结供以后采购借鉴的经验教训。
-  C.正确答案。采购审计旨在对规划采购、实施采购和管理采购过程进行结构化审查，总结采购工作中的经验教训。
-  D.这是管理采购过程的工作，而采购审计是在结束采购阶段进行的。
-  参见：PMBOKR指南第343页，解读第226页。
-  考点与答题技巧：采购审计。
-25.A.正确答案。编制采购文件是在规划采购过程的工作。
-  B.在实施采购过程中，买方发出采购文件，获取卖方建议书，对建议书进行评审，确定中标者，授予合同。
-  C.同上。
-  D.同上。
-  参见：PMBOKR指南第328页，解读第217页。
-  考点与答题技巧：实施采购过程。
-26.A.经济价格调整条款不用于应对工作范围变更的风险。
-  B.经济价格调整条款不用于应对现场条件变化的风险。
-  C.正确答案。如果合同周期较长(跨年度)，就可在合同中加人经济价格调整条款，来保护买方和卖方免受外界不可控情况(如通货膨胀)的影响。
-  D.经济价格调整条款不用于应对生产率低下的风险。
-  参见：PMBOKR指南第323页，解读第221页。
-  考点与答题技巧：总价加经济价格调整合同。
-27.A.总价合同往往需要较长时间的准备工作。
-  B.同上。
-  C.同上，而且题目中未提到服务期跨年度。
-  D.正确答案。由于情况紧急，不能编写详细的采购工作说明书，而且采购的规模不大，故可用工料合同。
-  参见：PMBOKR指南第324页，解读第223页。
-  考点与答题技巧：工料合同使用的条件：(1)工作性质清楚，但工作量不易确定；(2)采购规模不大；(3)需要快速签合同。这三个条件需同时具备。
-28.A.这是成本加固定费用合同。
-  B.这是成本加激励费用合同。
-  C.正确答案。在成本加奖励费用合同下，由买方完全凭自己的主观判断来决定给卖方支付的利润数。买方不需任何客观标准，卖方没有任何讨价还价的余地。
-  D.不能反映成本加奖励费用合同的本质。
-  参见：PMBOKR指南第324页，解读第222页。
-  考点与答题技巧：成本加奖励费用合同。注意：在考试时，为了区分成本加激励费用合同 (Cost Plus Incentive Fee)与成本加奖励费用合同(Cost Plus Award Fee)，考生应该阅读英文原文；因为这两个词可能被反过来翻译。
-29.A.采购工作说明书是采购文件的一部分，是对拟采购产品或服务的详细说明。
-  B.正确答案。供方选择标准通常是采购文件的一部分。
-  C.建议邀请书只是采购文件的一种类型，不如B全面。
-  D.供方选择标准是由买方编制的，而建议书是由潜在卖方编制的。
-  参见：PMBOKR指南第327页，解读第227—228页。
-  考点与答题技巧：采购文件与供方选择标准。尽管采购文件中不会包括供方选择标准的全部细节，但应包括主要的标准。
-30.A.合同变更控制系统规定了修改合同的流程，其中包括各种变更所需的审批层次。
-  B.对合同变更的跟踪系统也是合同变更控制系统的一部分。
-  C.争议处理程序也是合同变更控制系统的一部分。
-  D正确答案。任何合同变更都需要书面文件。
-  参见：PMBOKR指南第338页。
-  考点与答题技巧：合同变更控制系统。
-31.A.应用领域不是规划采购过程的输入。
-  B同上。
-  C.正确答案。解释同上。
-  D.同A。
-  参见：PMBOKR指南第314页，解读第224页。
-  考点与解题技巧：规划采购过程的输入。许多项目计划或文件都会影响到规划采购过程，因为采购必须为整个项目服务。用排除法，很容易选择C。
-32.A.常用的合同种类：总价合同、成本补偿合同、工料合同。
-  B.同上。
-  C.同上。
-  D.正确答案。经济价格调整条款可以包括在总价合同中。没有单独的价格调整合同。
-  参见：PMBOKR指南第322页，解读第221页。
-  考点与解题技巧：合同类型。
-33.A.正确答案。由于法规具有强制性，所以需要对合同做相应修改，以保持合同继续有效。
-  B.这种情况不属于合同变更。
-  C.这种情况不属于合同变更。
-  D.买方不能单方面决定合同变更。
-参见：PMBOKR指南第338页，解读第218～219页。
-  考点与解题技巧：采购管理中的合同变更。在采购管理知识领域，已批准的变更请求，主要是指对合同的变更。
-34.A.实施采购过程中，需要使用供方选择标准。
-  B.供方选择标准可以是客观或主观的。
-  C.供方选择标准不局限于价格。
-  D.正确答案。
-  参见：PMBOKR指南第327页。
-  考点与解题技巧：规划采购过程的输出：供方选择标准。
-35.A.不能这样做。
-B.正确答案。买方应尽力保证每一个潜在卖方(参会者)都在投标人会议上得到相同的信息。
-  C.通常项目经理应参加投标人会议，以便提供必要的协助。
-  D.不能这样做。
-  参见：PMBOKR指南第331页，解读第228页。
-  考点与解题技巧：实施采购过程中的投标人会议。
-36.A.从广义上讲，合同是采购文档的组成部分。
-  B.从广义上讲，采购文件是采购文档的组成部分。
-  C.正确答案。
-  D.合同往来函件是采购文档的组成部分。
-  参见：PMBOKR指南第343页，解读第235页。
-  考点与解题技巧：结束采购过程的输入：采购文档。对这个题目，必须看英文的选项，才能确保做出正确的选择。
-37.A.这三个审计分属不同的过程组，即：执行、监控和收尾。
-  B.同上。
-  C.同上。
-  D.正确答案。这三个审计都是独立的结构化的审查，以便总结经验教训。
-  参见：PMBOKR指南第204、310、343页。
-  考点与解题技巧：质量审计、风险审计与采购审计。
-38.A.资源日历是实施采购过程的输出。
-  B正确答案。
-  C.同A
-  D.同A。
-  参见：PMBOKR指南第334页，解读第224页。
-  考点与解题技巧：实施采购过程的输出：资源日历。
-39.A.成本补偿合同下，买方向卖方支付在项目上发生的实际成本，并外加一笔费用作为卖方的利润。
-  B.正确答案。解释同A。
-  C.同A。
-  D同上。
-  参见：PMBOKR指南第323页，解读第221页。
-  考点与解题技巧：合同类型：成本补偿合同。注意：成本补偿合同下的“费用(Fee)”主要是利润。
-40.A.正确答案。只有对拟采购的产品、服务或成果有准确的定义，才能签总价合同。
-   B.单价合同下，对产品、服务或成果的定义，通常不是很准确。
-   C.工料合同下，对产品、服务或成果的定义，通常不是很准确。
-   D.成本补偿合同下，不需要事先就准确定义拟采购的产品、服务或成果。
-   参见：PMBOKR指南第322页，解读第221页。
-   考点与解题技巧：合同的类型及其适用条件。
+# PMP模拟题   第十二章 项目采购管理_商老师_水手_新浪博客 http://blog.sina.com.cn/s/blog_5488a33b01015gg1.html
+# [转载]PMP模拟题   第十二章 项目采购管理_Anna_新浪博客 http://blog.sina.com.cn/s/blog_6e2ac44f010158y4.html
+# PMP考试技巧和真题汇总详解 - 豆丁网 http://www.docin.com/p-958653479-f24.html
+# PMP每日10题_商老师_水手_新浪博客 http://blog.sina.com.cn/s/blog_5488a33b0102wa22.html
+# PMP全真模拟题 - 计算机等级 - 道客巴巴 http://www.doc88.com/p-8975505925269.html
+# PMP试题第十二章 项目采购管理-历年试题资料-中培课堂 http://www.zpedu.com/SubjectInfo1470.html
+# 第12章 项目采购管理 - 工程建设 - 道客巴巴 http://www.doc88.com/p-7109935828786.html
+# 20121208仿真试题(200 50)--答案 - 经营企划 - 道客巴巴 http://www.doc88.com/p-7738830718328.html
+# 【PMP每日一练】2014-3-4-PMP/IPMP认证交流-项目管理区-思步网 http://www.step365.com/thread-6424-1-1.html
+# PMP 真题试题100样题 加入最新2013年06月真题_jxmpmp_231_新浪博客 http://blog.sina.com.cn/s/blog_c13518890101j6dp.html
+# [转载]2015年PMP真题101-200参考答案（仅参考）张乐芳lele_新浪博客 http://blog.sina.com.cn/s/blog_67402df80102wt0q.html
+# 项目管理习题-采购 http://www.rcgus.com/TSLSZXMJ/571583.html
