--- a/manage/pmp/12-采购.md
+++ b/manage/pmp/12-采购.md
@@ -11,3 +11,5 @@
 # PMP 真题试题100样题 加入最新2013年06月真题_jxmpmp_231_新浪博客 http://blog.sina.com.cn/s/blog_c13518890101j6dp.html
 # [转载]2015年PMP真题101-200参考答案（仅参考）张乐芳lele_新浪博客 http://blog.sina.com.cn/s/blog_67402df80102wt0q.html
 # 项目管理习题-采购 http://www.rcgus.com/TSLSZXMJ/571583.html
+# [转载]2015年PMP真题讨论之131-135题_郑州乐奇游乐设备_新浪博客 http://blog.sina.com.cn/s/blog_e451fce10102wcih.html
+# PMP模拟试题与解析（九） - CSDN博客 http://blog.csdn.net/alen_liu_sz/article/details/73396903
