--- a/manage/pmp/三模.md
+++ b/manage/pmp/三模.md
@@ -1,5 +1,6 @@
 
 # 三模解析一_甜梦文库 http://m.9512.net/read/a44a11a08da5dab42cefbda8.html
+# 三模解析一_图文_百度文库 https://wenku.baidu.com/view/a8bdef2cb4daa58da0114aa4.html
 # 三模解析二_图文_百度文库 https://wenku.baidu.com/view/e8f1fff9fab069dc502201a7.html
 # http://m.9512.net/read/3715ce64b73179cc850be7d2.html
 # PMP题库总结 - CSDN博客 http://blog.csdn.net/lenolong/article/details/8681137
