--- a/docker/8-容器网络/3.flannel/4.flannel的连通与隔离.md
+++ b/docker/8-容器网络/3.flannel/4.flannel的连通与隔离.md
@@ -52,7 +52,9 @@ ip r
 # 10.2.54.0/24 dev docker0  proto kernel  scope link  src 10.2.54.1
 ```
 
+## pod1与pod2在同一台主机
 
+pod1和pod2在同一台主机的话，由docker0网桥直接转发请求到pod2，不需要经过flannel。
 
 另外，flannel 是没有 DNS 服务的，容器无法通过 hostname 通信。
 
