--- a/docker/8-容器网络/4.calico/1.如何部署 Calico 网络.md
+++ b/docker/8-容器网络/4.calico/1.如何部署 Calico 网络.md
@@ -20,8 +20,8 @@ Calico 网络中的每个主机都需要运行 Calico 组件，提供容器 inte
 
 ```sh
 ### 在172.20.62.127 下载etcd
-
-ETCD_VER=v3.3.5
+# ETCD_EVR=v2.3.7
+# ETCD_VER=v3.3.5
 DOWNLOAD_URL=https://github.com/coreos/etcd/releases/download
 mkdir -p /opt/etcd
 curl -L ${DOWNLOAD_URL}/${ETCD_VER}/etcd-${ETCD_VER}-linux-amd64.tar.gz -o /opt/etcd/etcd-${ETCD_VER}-linux-amd64.tar.gz
