--- a/docker/8-容器网络/4.calico/2.分析 Calico 的网络结构.md
+++ b/docker/8-容器网络/4.calico/2.分析 Calico 的网络结构.md
@@ -23,6 +23,7 @@ docker rm -f bbox2
 docker run --net cal_net1 --name bbox2 -tid busybox
 ### ip为 192.168.181.0
 docker exec bbox2 ip a
+docker exec bbox2 ping -c 2 bbox1
 ### 所有发送到 bbox1 的数据都会发给 cali51d64ca9854，因为 cali51d64ca9854 与 cali0 是一对 veth pair，bbox1 能够接收到数据。
 ### host2 添加了两条路由：
 ip r
