--- a/docker/8-容器网络/4.calico/3.Calico 的默认连通性.md
+++ b/docker/8-容器网络/4.calico/3.Calico 的默认连通性.md
@@ -1,6 +1,45 @@
 
 
+## 连通性
+
+```sh
+# node1
+docker run --net net1 --name workload-A -tid busybox
+# node2
+docker run --net net1 --name workload-E -tid busybox
+# 可以在node1上使用如下命令来试验连通性：
+# 同一网络内的容器（即使不在同一节点主机上）可以使用容器名来访问
+docker exec workload-A ping -c 4 workload-E.net1
+```
+
+
+##
+
+```sh
+### 1. 根据 workload-A 的路由表，将数据包从 cal0 发出
+docker exec workload-A ip r
+# default via 169.254.1.1 dev cali0 
+# 169.254.1.1 dev cali0 scope link 
+### 2. 数据经过 veth pair 到达 host1，查看路由表，数据由 tunl0 发给 host2（172.20.62.105）。
+docker exec workload-A ip a
+# inet 10.20.0.193/32 scope global cali0
+ip r
+# 10.20.0.193 dev cali7081ad14910  scope link
+# 10.20.0.128/26 via 172.20.62.105 dev tunl0  proto bird onlink
+### 3. host2 收到数据包，根据路由表发送给 cali4f08ab5a77d veth pair cali0 到达 workload-E。
+ip r
+10.20.0.129 dev cali4f08ab5a77d  scope link
+### 4. 使用tcmpdump检测连通过程
+tcpdump -i cali7081ad14910
+# tcpdump: verbose output suppressed, use -v or -vv for full protocol decode
+# listening on cali7081ad14910, link-type EN10MB (Ethernet), capture size 262144 bytes
+# 10:20:10.170408 IP 10.20.0.193 > 10.20.0.129: ICMP echo request, id 34048, seq 0, length 64
+# 10:20:10.170936 IP 10.20.0.129 > 10.20.0.193: ICMP echo reply, id 34048, seq 0, length 64
+docker exec workload-A ping -c 4 workload-E
+```
+
 
 参考
 
 1 https://mp.weixin.qq.com/s/7o8QxGydMTUe4Q7Tz46Diw
+2 https://blog.csdn.net/qq_21816375/article/details/79475163
