--- a/docker/8-容器网络/4.calico/5.如何定制 Calico 的 IP 池.md
+++ b/docker/8-容器网络/4.calico/5.如何定制 Calico 的 IP 池.md
@@ -1,6 +1,59 @@
 
 
 
+
+```sh
+mkdir -p /etc/calico
+cat << EOF > /etc/calico/calicoctl.cfg
+apiVersion: v1
+kind: calicoApiConfig
+metadata:
+spec:
+  datastoreType: "etcdv2"
+  etcdEndpoints: "http://172.20.62.127:2379"
+EOF
+calicoctl get ipPool
+```
+
+## ipPool
+
+```sh
+cat << EOF > /etc/calico/ipPool.yaml
+- apiVersion: v1
+  kind: ipPool
+  metadata:
+    cidr: 10.20.0.0/24
+  spec:
+    ipip:
+      enabled: true
+    nat-outgoing: true
+EOF
+calicoctl create -f /etc/calico/ipPool.yaml
+calicoctl get ipPool
+```
+
+## 连通性测试
+
+参考官网上的一个例子，在node1和node2上分别创建几个容器来测试下容器网络的连通性。
+
+```sh
+# node1
+docker run --net net1 --name workload-A -tid busybox
+docker run --net net2 --name workload-B -tid busybox
+docker run --net net1 --name workload-C -tid busybox
+# node2
+docker run --net net3 --name workload-D -tid busybox
+docker run --net net1 --name workload-E -tid busybox
+# 可以在node1上使用如下命令来试验连通性：
+# 同一网络内的容器（即使不在同一节点主机上）可以使用容器名来访问
+docker exec workload-A ping -c 4 workload-C.net1
+docker exec workload-A ping -c 4 workload-E.net1
+# 不同网络内的容器需要使用容器ip来访问（使用容器名会报：bad address）
+docker exec workload-A ping -c 2  `docker inspect --format "{{ .NetworkSettings.Networks.net2.IPAddress }}" workload-B`
+# 同一网络内的容器是能相互通信的；不同网络内的容器相互是不通的。不同节点上属于同一网络的容器也是能相互通信的，这样就实现了容器的跨主机互连。
+```
+
 参考
 
 1 https://mp.weixin.qq.com/s/7o8QxGydMTUe4Q7Tz46Diw
+2 https://www.cnblogs.com/lkun/p/7857453.html
