--- a/guava/7.The EventBus Class/11.设计模式-观察者模式-Guava EventBus.md
+++ b/guava/7.The EventBus Class/11.设计模式-观察者模式-Guava EventBus.md
@@ -7,28 +7,13 @@ Observer（观察者）
 Guava EventBus详解
 Guava EventBus使用示例
  
-1. Observer（观察者）
+## 1. Observer（观察者）
  
 1.1 背景
  
 我们设计系统时，常常会将系统分割为一系列相互协作的类，使得这些类之间可以各自独立地复用，系统整体结构也会比较清晰。这是一种最基本的面向对象的设计方式，大多数情况下也非常有效。但是，如果这些相互协作的类之间的“协作”关系比较复杂，那么就会有副作用：需要维护这些类对象间的状态一致性。
  
-我们以一个数据可视化系统为例来说明：
- 
-（1）数据可视化系统可以分割为两个主要的类：定义应用数据的类和负责界面表示的类；换言之，数据可视化系统中存在两类对象：应用数据对象（用于封装底层数据源中的数据）和界面对象（如：表格对象、柱形图对象、饼图对象等等）；
- 
-（2）数据可视化系统中类（对象）之前的协作关系：如果应用数据对象发生变化（表示底层数据源中的数据发生变化），则表格对象、柱形图对象、饼图对象需要被立即更新；反过来也是如此，如果表格对象发生变化（假设表格对象的变化会导致底层数据源中的数据发生变化），则数据对象需要被立即更新，从而导致柱形图对象、饼图对象也需要被更新；
- 
-数据对象、表格对象、柱形图对象、饼图对象之间的协作关系如下：
- 
 
- 
-表格对象、柱形图对象、饼图对象分别使用不同的表示形式描述同一个数据对象的信息，它们之间相互并不知道对方的存在，这样我们可以根据需要单独复用这些对象（类）。但在我们数据可视化系统的场景中，它们表现的“互相知道”（参见上述（2））。
- 
-这种“互相知道”的行为意味着表格对象、柱形图对象、饼图对象都需要依赖于数据对象，数据对象的任何状态变化都应立即通过它们，某一界面对象的变化实际也是通过数据对象反映给其它界面对象的。同时也没有理由将依赖于数据对象的界面对象数目限定为三个，对相同的数据可以有任意数目的不同用户界面。
- 
-综上所述，数据、表格、柱形图、饼图这几个互相协作的类的副作用表现为：需要维护数据对象、表格对象、柱形图对象（可能还有其它界面对象）之间状态的一致性，某一对象的状态发生变化，需要立即更新其它对象的状态。
- 
 1.2 定义
  
 观察者模式用于定义对象间的一种一对多的依赖关系，当一个对象的状态发生变化时，所有依赖于它的对象都将得到通知并被“自动”更新。它有两个关键对象：目标（Subject）和观察者（Observer）。一个目标可以有任意数量的依赖它的观察者。一旦目标的状态发生改变，所有的观察者都得到通知。作为对这个通知的响应，每个观察者都将查询目标以使其状态与目标状态同步。
@@ -38,9 +23,7 @@ Guava EventBus使用示例
 注：参考1.1中的数据可视化系统示例，“目标”为数据对象，“观察者”为表格对象、柱形图对象、饼图对象。
  
 1.3 结构与协作
- 
-
- 
+  
 Subject（目标）
  
 —目标知道它的观察者，可以有任意多个观察者观察同一个目标。
@@ -85,15 +68,13 @@ ChangeManager有三个责任：
 （2）它定义一个特定的更新策略（这里的更新策略是更新所有依赖于这个目录的观察者）；
 （3）根据一个目标的请求（notify），它更新所有依赖于这个目标的观察者；
  
-2.  Guava EventBus详解
+## 2.  Guava EventBus详解
  
 通常情况下，一个系统（这里特指进程）内部各个组件之间需要完成事件分发或消息通信，往往需要这些组件之间显式地相互引用。如果这些组件数目较多，且相互引用关系复杂就会出现副作用：需要维护这些相互引用的组件之间的状态一致性。
  
 观察者模式（Observer）用于解决上述问题，EventBus就是该模式的一个实现，它是Google Guava提供的一个组件。
  
 EventBus使用“发布—订阅”的通信模式，使得系统（进程）内各个组件之间无需相互显式引用即可完成事件分发或消息通信，如下图所求：
- 
-
  
 它的设计结构非常符合观察者模式，
  
@@ -220,7 +201,7 @@ dispatchQueuedEvents的过程其实就是执行队列中的事件处理器，过
  
 EventBus是一种同步实现（即事件处理器是被依次触发的），另外有一种异步实现AsyncEventBus，核心原理相同，有兴趣的读者可自行研究。
  
-3. Guava EventBus使用示例
+## 3. Guava EventBus使用示例
  
 
  
