--- a/kubernetes/16.日常维护/1.获取K8S集群中运行的所有容器镜像.md
+++ b/kubernetes/16.日常维护/1.获取K8S集群中运行的所有容器镜像.md
@@ -1,8 +1,7 @@
-【K8S学习笔记】Part2：获取K8S集群中运行的所有容器镜像 - HackHan - 博客园 https://www.cnblogs.com/leejack/p/8319311.html
 
-本文将介绍如何使用kubectl列举K8S集群中运行的Pod内的容器镜像。
-
-注意：本文针对K8S的版本号为v1.9，其他版本可能会有少许不同。
+【K8S学习笔记】Part2：获取K8S集群中运行的所有容器镜像 - HackHan - 博客园 
+https://www.cnblogs.com/leejack/p/8319311.html
+https://kubernetes.io/docs/tasks/access-application-cluster/list-all-running-container-images/
 
 0x00 准备工作
 
