--- a/java/JVM/2.JVM运行机制简介/1.JAVA虚拟机的架构.md
+++ b/java/JVM/2.JVM运行机制简介/1.JAVA虚拟机的架构.md
@@ -16,6 +16,11 @@
 * 类加载子系统负责从文件系统或者网络中加载Class信息，加载的类信息存放于一块称为方法区的内存空间。
 * 类加载子系统将Class信息保存在方法区，方法区还存放运行时常量池信息。
 
+## PC寄存器
+
+PC寄存器是每个线程私有的空间：
+* 不是本地方法。PC寄存器指向当前正在被执行的指令；
+* 本地方法。PC寄存器undefined；
 
 2. 堆保存几乎所有的对象实例。堆是线程共享的。
 3. Java NIO库可以访问Java堆外的直接内存。
