--- a/java/JVM/2.JVM运行机制简介/5.方法区.md
+++ b/java/JVM/2.JVM运行机制简介/5.方法区.md
@@ -10,7 +10,9 @@
 ```bash
 #初始5MB，最大5MB
 
-mvn exec:java -Dexec.mainClass="com.gmail.mosoft521.ch02.perm.PermTest" -Dexec.args="-XX:+PrintGCDetails -XX:PermSize=5M -XX:MaxPermSize=5m"
+mvn exec:java -Dexec.mainClass="geym.zbase.ch2.perm.PermTest" -Dexec.args="-XX:+PrintGCDetails -XX:MetaSpaceSize=5M -XX:MaxMetaSpaceSize=5m"
+mvn package
+java -cp target/JVMInPractice.jar geym.zbase.ch2.perm.PermTest -XX:+PrintGCDetails -XX:MetaSpaceSize=5M -XX:MaxMetaSpaceSize=5m
 ```
 
 * 1.8 使用元数据区代替永久区。
@@ -18,8 +20,60 @@ mvn exec:java -Dexec.mainClass="com.gmail.mosoft521.ch02.perm.PermTest" -Dexec.a
 * 默认情况，虚拟机会耗尽所有可用系统内存。
 
 
-maven
+```java
+public class Hello {
+    public static void main(String[] args) {
+        for (String arg : args) {
+            System.out.println(arg);
+        }
+    }
+}
+import java.net.URL;
+import java.net.URLClassLoader;
 
-* [java - Including dependencies in a jar with Maven - Stack Overflow ](https://stackoverflow.com/questions/1729054/including-dependencies-in-a-jar-with-maven)
+public class URLClassLoaderTest {
+
+	public static void main(String[] args) throws Exception {
+		URL[] urls={new URL("file:Hello.class")};
+		URLClassLoader ucl=new URLClassLoader(urls);
+		while(true){
+			ucl.loadClass("Hello").newInstance();
+		}
+	}
+}
+```
+
+```shell
+docker run -it --rm -v /opt/java:/opt/java -w /opt/java openjdk:7 javac Hello.java
+docker run -it --rm -v /opt/java:/opt/java -w /opt/java openjdk:7 javac URLClassLoaderTest.java
+docker run -it --rm -v /opt/java:/opt/java -w /opt/java openjdk:7 java -XX:+PrintGCDetails -XX:PermSize=1M -XX:MaxPermSize=1m URLClassLoaderTest
+# [GC [PSYoungGen: 2580K->192K(74752K)] 2580K->192K(244224K), 0.0034700 secs] [Times: user=0.01 sys=0.00, real=0.01 secs] 
+# [Full GC [PSYoungGen: 192K->0K(74752K)] [ParOldGen: 0K->154K(118784K)] 192K->154K(193536K) [PSPermGen: 2047K->2047K(2048K)], 0.0177140 secs] [Times: user=0.02 sys=0.01, real=0.01 secs] 
+# [GC [PSYoungGen: 0K->0K(81408K)] 154K->154K(200192K), 0.0020360 secs] [Times: user=0.01 sys=0.00, real=0.01 secs] 
+# [Full GC [PSYoungGen: 0K->0K(81408K)] [ParOldGen: 154K->154K(222208K)] 154K->154K(303616K) [PSPermGen: 2047K->2047K(2048K)], 0.0072540 secs] [Times: user=0.01 sys=0.00, real=0.00 secs] 
+# [GC [PSYoungGen: 0K->0K(103424K)] 154K->154K(325632K), 0.0009100 secs] [Times: user=0.00 sys=0.01, real=0.01 secs] 
+# [Full GC [PSYoungGen: 0K->0K(103424K)] [ParOldGen: 154K->150K(339456K)] 154K->150K(442880K) [PSPermGen: 2047K->2047K(2048K)], 0.0068960 secs] [Times: user=0.01 sys=0.00, real=0.00 secs] 
+# [GC [PSYoungGen: 0K->0K(106496K)] 150K->150K(445952K), 0.0010630 secs] [Times: user=0.01 sys=0.00, real=0.00 secs] 
+# [Full GC [PSYoungGen: 0K->0K(106496K)] [ParOldGen: 150K->150K(517632K)] 150K->150K(624128K) [PSPermGen: 2047K->2032K(2048K)], 0.0061470 secs] [Times: user=0.01 sys=0.00, real=0.01 secs] 
+# Error occurred during initialization of VM
+# java.lang.OutOfMemoryError: PermGen space
+# 	at sun.net.www.ParseUtil.<clinit>(ParseUtil.java:52)
+# 	at sun.misc.Launcher.getFileURL(Launcher.java:464)
+# 	at sun.misc.Launcher$ExtClassLoader.getExtURLs(Launcher.java:188)
+# 	at sun.misc.Launcher$ExtClassLoader.<init>(Launcher.java:160)
+# 	at sun.misc.Launcher$ExtClassLoader$1.run(Launcher.java:144)
+# 	at sun.misc.Launcher$ExtClassLoader$1.run(Launcher.java:138)
+# 	at java.security.AccessController.doPrivileged(Native Method)
+# 	at sun.misc.Launcher$ExtClassLoader.getExtClassLoader(Launcher.java:137)
+# 	at sun.misc.Launcher.<init>(Launcher.java:67)
+# 	at sun.misc.Launcher.<clinit>(Launcher.java:53)
+# 	at java.lang.ClassLoader.initSystemClassLoader(ClassLoader.java:1492)
+# 	at java.lang.ClassLoader.getSystemClassLoader(ClassLoader.java:1477)
+```
+
+
+## 参考
+
+1. https://stackoverflow.com/questions/1729054/including-dependencies-in-a-jar-with-maven
 
 
