--- a/java/JVM/3.常用JVM参数/1.读懂虚拟机日志.md
+++ b/java/JVM/3.常用JVM参数/1.读懂虚拟机日志.md
@@ -18,6 +18,30 @@ PrintGCApplicationConcurrentTime应用程序的执行时间
 PrintGCApplicationStoppedTime应用程序由于GC而产生的停顿时间
 PrintReferenceGC系统内的软引用、弱引用、虚引用和Finallize队列，
 
+## shell
+
+```shell
+### 3.1.1 跟踪垃圾回收-读懂虚拟机日志
+#java编译UTF-8
+javac -encoding UTF-8 geym\zbase\ch2\localvar\LocalVarGC.java
+# PrintGC
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintGC com.gmail.mosoft521.ch02.localvar.LocalVarGC
+# PrintGCDetails
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintGCDetails com.gmail.mosoft521.ch02.localvar.LocalVarGC
+# PrintHeapAtGC在GC前后打印堆的信息
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintHeapAtGC com.gmail.mosoft521.ch02.localvar.LocalVarGC
+# PrintGCTimeStamps输出虚拟机启动后的时间偏移量
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintGCTimeStamps -XX:+PrintGC com.gmail.mosoft521.ch02.localvar.LocalVarGC
+# PrintGCApplicationConcurrentTime应用程序的执行时间
+# PrintGCApplicationStoppedTime应用程序由于GC而产生的停顿时间
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintGCApplicationConcurrentTime -XX:+PrintGCApplicationStoppedTime com.gmail.mosoft521.ch02.localvar.LocalVarGC
+# PrintReferenceGC系统内的软引用、弱引用、虚引用和Finallize队列，
+# 配合PrintGCDetails使用
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintReferenceGC -XX:+PrintGCDetails com.gmail.mosoft521.ch02.localvar.LocalVarGC
+# -Xloggc:gc.log输出日志文件
+java -classpath target/szjvm-1.0-SNAPSHOT-jar-with-dependencies.jar -XX:+PrintGC -Xloggc:gc.log com.gmail.mosoft521.ch02.localvar.LocalVarGC
+```
+
 ## 实例
 
 ```shell
