--- a/java/JVM/3.常用JVM参数/9.Client和Server二选一.md
+++ b/java/JVM/3.常用JVM参数/9.Client和Server二选一.md
@@ -2,4 +2,16 @@
 
 Client和Server二选一
 
+Server模式的启动比较慢，因为Server模式会尝试收集更多的系统性能信息，使用更复杂的优化算法进行优化。
+
 使用-XX:+PrintFlagsFinal参数查看给定参数的默认值。
+
+```shell
+### 函数被调用10000次后，会进行JIT编译
+$ java -XX:+PrintFlagsFinal -client -version|grep -E ' CompileThreshold|MaxHeapSize'
+     intx CompileThreshold                          = 10000                               {pd product}
+    uintx MaxHeapSize                              := 1990197248                          {product}
+java version "1.8.0_151"
+Java(TM) SE Runtime Environment (build 1.8.0_151-b12)
+Java HotSpot(TM) 64-Bit Server VM (build 25.151-b12, mixed mode)
+```
