--- a/jenkins/4.配置jenkins服务器/2.docker.jenkins修改时区.md
+++ b/jenkins/4.配置jenkins服务器/2.docker.jenkins修改时区.md
@@ -1,4 +1,5 @@
 
+```shell
 ## 宿主机上修改
 echo "Asia/Shanghai" > /etc/timezone
 cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
@@ -9,3 +10,4 @@ docker run -d -p 8080:8080 -p 50000:50000 --restart always --name jenkins \
 -v /opt/k8s/admin.conf:/opt/admin.conf \
 -e JENKINS_JAVA_OPTIONS="-Duser.timezone=Asia/Shanghai" \
 jenkins
+```
