--- a/java/JVM/3.常用JVM参数/2.整理JRE瘦身或精简JRE.md
+++ b/java/JVM/3.常用JVM参数/2.整理JRE瘦身或精简JRE.md
@@ -6,13 +6,13 @@
 1. bin: 可以认为这是Java虚拟机.
 2. lib: 执行class文件时,Java虚拟机需要用到的类库及资源文件.
  
-一、bin瘦身主要从两方面考虑
+## 一、bin瘦身主要从两方面考虑
 ① exe文件，最主要的工具是java.exe,它用来执行class文件，如果只是为了单纯运行Java程序的话,其他可执行文件一般都是用不到的(可剔除). 
 ② DLL文件，是java.exe执行class文件过程中调用的，执行class文件,java.exe需要哪个库文件就加载哪个dll,不需用的可以剔除.
 
 我们要做的就是找到哪些DLL文件是有用？我们运行一个Java文件看看，可以利用360安全卫士得到
 1、准备java文件：
-[html] view plain copy
+```java
 /*  
 @author jarg  
 @TODO 举例查看当前程序必需的dll文件  
@@ -29,6 +29,7 @@ public class Hello
         ir.read();  
     }  
 }  
+```
 2、编译、运行
 3、360安全卫士 -> 功能大全 -> 进程管理器 右上角的显示加载到当前选中进程中的dll
 
@@ -37,7 +38,7 @@ public class Hello
 
 到这里bin的瘦身成功！
 
-二、lib的瘦身
+## 二、lib的瘦身
 ① lib目录最主要的类库是rt.jar,是任意Java程序所必需的类库.
 lib目录大约62MB,但是rt.jar类库就占了47MB,可见精简bin目录,最主要是裁剪rt.jar.
  
@@ -52,7 +53,7 @@ lib目录大约62MB,但是rt.jar类库就占了47MB,可见精简bin目录,最主
 C:/Java/jdk1.6.0_16/bin/java -jar  -classpath lib/*.jar; -verbose:class printSoft.jar >> class.txt  
 pause  
 在class.txt文件中保存如下的信息：
-[plain] view plain copy
+```shell
 [Loaded java.lang.Math from shared objects file]  
 [Loaded java.nio.charset.Charset$3 from C:\Java\jdk1.6.0_16\jre\lib\rt.jar]  
 [Opened C:\Java\jdk1.6.0_16\jre\lib\charsets.jar]  
@@ -61,6 +62,7 @@ pause
 [Loaded java.lang.Class$1 from shared objects file]  
 [Loaded sun.reflect.ReflectionFactory$1 from shared objects file]  
 [Loaded sun.reflect.NativeConstructorAccessorImpl from shared objects file]  
+```
 我们可以从class.txt中得到我们需要的jar文件和class文件，提交jar很简单，我就不说了，下面我们在看看如何提交我们用到的class文件：
 由于class.txt每行都是形同: [Loaded java.lang.System from shared objects file]的一串字符,修改文本以方便获取类完整名java.lang.System,从而获得类似类路径java/lang/System的一串字符,方便后继编写类拷贝程序.
 修改方法:
@@ -70,7 +72,7 @@ pause
 4. 删除以[Opened 开头的行.
 5. 删除程序中System.out.println的输出行.
 提取之后class.txt就剩下如下信息：
-[plain] view plain copy
+```shell
 java/lang/Object  
 java/io/Serializable  
 java/lang/Comparable  
@@ -78,9 +80,10 @@ java/lang/CharSequence
 java/lang/String  
 java/lang/reflect/GenericDeclaration  
 .......  
+```
 
 2、从现有的jar包中提取我们整理的class文件，然后打包成jar，最终取代原有的jar，下面是一个提取class的工具类：
-[java] view plain copy
+```java
 import java.io.BufferedReader;  
 import java.io.File;  
 import java.io.FileInputStream;  
@@ -109,8 +112,7 @@ public class CopyClass
     {  
         String[] jarArr = new String[]{"rt","charsets"};  
         CopyClass obj = new CopyClass("C:\\Users\\lzp\\Desktop\\printSoft\\jre6\\lib\\",  
-[java] view plain copy
-                                                         "C:\\Users\\lzp\\Desktop\\printSoft\\jre6\\lib\\",jarArr);  
+                                      "C:\\Users\\lzp\\Desktop\\printSoft\\jre6\\lib\\",jarArr);  
         obj.readAndCopy("C:\\Users\\lzp\\Desktop\\printSoft\\class.txt");  
     }  
   
@@ -185,6 +187,7 @@ public class CopyClass
         return result;  
     }  
 }  
+```
 然后在将提取的class文件打包成jar文件，利用jar命令进行打包，然后替换以前的jar文件，这样lib就从以前的六十多M到几M多有，如图：
 
 
