--- a/liquibase/5.maven/4.mvn-liquibase-checkpoint.md
+++ b/liquibase/5.maven/4.mvn-liquibase-checkpoint.md
@@ -18,6 +18,7 @@ I initially found it difficult to figure out how to configure the liquibase Mave
 
 The liquibase update is configured to run automatically, followed by tagging the database at the current Maven revision number.
 
+```xml
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.myspotontheweb.db</groupId>
@@ -69,6 +70,7 @@ The liquibase update is configured to run automatically, followed by tagging the
         </profile>
     </profiles>
 </project>
+```
 Liquibase is now configured as part of the standard life-cycle so can be run as follows:
 
 mvn clean compile
