--- a/mysql/30.MySQL-Cluster/1.MySQL-Cluster架构.md
+++ b/mysql/30.MySQL-Cluster/1.MySQL-Cluster架构.md
@@ -1,14 +1,5 @@
 
-# 第三十二章 Mysql Cluster
-
-* Cluster
-  * 一组节点的组合
-  * 数据节点：存储数据
-  * SQL节点：存放表结构
-  * 管理节点：管理其他节点
-* MySQL使用NDB存储引擎来对数据节点的数据进行存储
-
-## 32.1 MySQL Cluster架构
+MySQL-Cluster架构
 
 * 3中节点类型
   * 管理节点
@@ -29,6 +20,4 @@
     * 每个数据节点可以有多个镜像节点
     * Cluster中可以有多个数据节点
 
-
-## 32.2 MySQL Cluster的配置
-
+    
