--- a/java/JVM/5.介绍GC的设置参数，并分析相关的案列/4.老年代ParallelOldGC回收器.md
+++ b/java/JVM/5.介绍GC的设置参数，并分析相关的案列/4.老年代ParallelOldGC回收器.md
@@ -1,7 +1,7 @@
 老年代ParallelOldGC回收器
 
 * 老年代ParallelOldGC回收器
-  * 使用**标记压缩算法**；
+  * 使用`标记压缩算法`；
   * 关注吞吐量的垃圾回收器组合；
 * 参数
   * -XX:ParallelGCThreads也可以用于设置垃圾回收时的线程数量；
