--- a/java/JVM/5.介绍GC的设置参数，并分析相关的案列/6.G1回收器.md
+++ b/java/JVM/5.介绍GC的设置参数，并分析相关的案列/6.G1回收器.md
@@ -3,7 +3,7 @@ G1回收器
 * G1(Garbage First)
   * JDK1.7引入；
   * 属于分代垃圾回收器，使用了分区算法；
-  * **记忆集**是G1中维护的一个数据结构，简称RS；
+  * `记忆集`是G1中维护的一个数据结构，简称RS；
   * 区域A的RS中，记录了区域A中被其他区域引用的对象；
   * RS通过CardTable来记录存活对象；
   * CSet(Collection Sets)表示被选取的、将要被收集的区域的集合；
@@ -22,12 +22,12 @@ G1回收器
   * 新生代GC只处理eden和survivor区；
   * 部分survivor或eden区会晋升到老年代；
 * 并发标记周期
-  * 初始标记（停顿）**initial-mark**：标记从根节点直接可达的对象，新生代GC，全局停顿，应用线程停止；
-  * 根区域扫描**concurrent-root-region-scan**：扫描由survivor区直接可达的老年代区域，根区域扫描不能和新生代GC同时执行；
-  * 并发标记**concurrent-mark**：扫描并标记整个堆的存活对象，可被新生代GC打断；
-  * 重新标记（停顿）**remark**：修正并发标记的结果，使用**SATB(Snapshot At The Beginning)**算法，在标记之初为存活对象创建快照，加速重新标记速度；
-  * 独占清理（停顿）**cleanup**：更新**记忆集（Remebered Set）**，标记混合回收的区域；
-  * 并发清理**concurrent-cleanup**：并发清理空闲区域；
+  * 初始标记（停顿）`initial-mark`：标记从根节点直接可达的对象，新生代GC，全局停顿，应用线程停止；
+  * 根区域扫描`concurrent-root-region-scan`：扫描由survivor区直接可达的老年代区域，根区域扫描不能和新生代GC同时执行；
+  * 并发标记`concurrent-mark`：扫描并标记整个堆的存活对象，可被新生代GC打断；
+  * 重新标记（停顿）`remark`：修正并发标记的结果，使用`SATB(Snapshot At The Beginning)`算法，在标记之初为存活对象创建快照，加速重新标记速度；
+  * 独占清理（停顿）`cleanup`：更新`记忆集（Remebered Set）`，标记混合回收的区域；
+  * 并发清理`concurrent-cleanup`：并发清理空闲区域；
 * 混合回收
   * 并发标记确定垃圾较多的区域，混合回收优先回收垃圾比例较高的区域；
   * 执行年轻代GC，同时，选取一些被标记的老年代区域进行回收；
