--- a/java/JVM/5.介绍GC的设置参数，并分析相关的案列/1.串行回收器.md
+++ b/java/JVM/5.介绍GC的设置参数，并分析相关的案列/1.串行回收器.md
@@ -1,11 +1,11 @@
 串行回收器
 
 * 串行回收器
-  * 串行回收器是指使用**单线程**进行垃圾回收的回收器；
-  * 新生代串行处理器使用**复制算法**；
-  * 老年代串行处理器使用**标记压缩算法**
-  * **独占式**的垃圾回收；
-  * **Stop-The-World**垃圾回收时，应用程序中的所有线程都停止工作，进行等待；
+  * 串行回收器是指使用`单线程`进行垃圾回收的回收器；
+  * 新生代串行处理器使用`复制算法`；
+  * 老年代串行处理器使用`标记压缩算法`
+  * `独占式`的垃圾回收；
+  * `Stop-The-World`垃圾回收时，应用程序中的所有线程都停止工作，进行等待；
   * 串行回收器可以在新生代和老年代使用；
 * 参数
   * -XX:+UseSerialGC：新生代、老年代都使用串行回收器。Client模式默认的垃圾回收器；
