--- a/java/JVM/5.介绍GC的设置参数，并分析相关的案列/5.CMS主要工作步骤.md
+++ b/java/JVM/5.介绍GC的设置参数，并分析相关的案列/5.CMS主要工作步骤.md
@@ -8,8 +8,8 @@ CMS（Concurrent Mark Sweep）
 * CMS收集周期
   * CMS并非没有暂停，而是用两次短暂停来替代串行标记整理算法的长暂停
 * CMS的步骤(初始标记和重新标记是独占系统资源的)
-  1. 初始标记（STW独占）CMS-initial-mark：标记根对象
-  2. 并发标记CMS-concurrent-mark：标记所有对象
+  1. 初始标记（STW独占）CMS-initial-mark：从垃圾回收的”根对象”开始，只扫描到能够和”根对象”直接关联的对象，并作标记
+  2. 并发标记CMS-concurrent-mark：在初始标记的基础上继续向下追溯标记
   3. 预清理CMS-concurrent-preclean：清理前准备以及控制停顿时间
   4. 重新标记（STW独占）CMS-remark：修正并发标记数据；
   5. 并发清理CMS-concurrent-sweep：在标记完成后，正式回收垃圾对象；
@@ -37,3 +37,4 @@ CMS（Concurrent Mark Sweep）
 1. 实战JAVA虚拟机.JVM故障诊断与性能优化
 2. https://www.cnblogs.com/ggjucheng/p/3977612.html
 3. https://blog.csdn.net/hqq2023623/article/details/50993165
+4. http://www.importnew.com/2782.html
