--- a/dbv/2.documentation.md
+++ b/dbv/2.documentation.md
@@ -73,7 +73,7 @@ Select the new object, and press the Push to database button. This confirmation 
 
 
 
-Creating revisions
+## Creating revisions
 This is where the true magic of database version control into place: revision scripts.
 
 A revision script is just a simple SQL query that alters the database in some way. Whether it drops a column from a database, inserts some records, or does something else entirely, any operation you do on the database, even if performed using a tool like Adminer, will result in a SQL query that every team member will have to process.
@@ -103,23 +103,22 @@ IMPORTANT! While the .sql file name isn't important, the subdirectory I placed i
 
 After this step, I simply commit the new file to the VCS, and keep on working.
 
-Receiving revisions
+## Receiving revisions
 After I've commited to version control the changes I've made to the database, Mike, another developer, wants to apply those changes to his database.
 
 Mike runs the update / pull command of our VCS, in order to receive the new files
 
 Accessing dbv.php, the new revision is highlighted for him:
 
-
-
 Mike presses the Run selected revisions button at the bottom of the table.
 
 His database has now been updated, and is in the same state as mine.
 
-Writing custom DBMS adapters
+## Writing custom DBMS adapters
 
 MySQL isn't your flavor of choice when it comes to database platforms? No problem, I made sure implementing your own was as easy as possible. All you have to do is create a PHP class (whose name begins with DBV_Adapter_) that implements DBV_Interface and throws DBV_Exception instances on errors. The interface code (found in /lib/adapters/Interface.php) is self-explanatory, so I will simply include it here instead of writing instructions:
 
+```php
 interface DBV_Adapter_Interface
 {
     /**
@@ -152,3 +151,4 @@ interface DBV_Adapter_Interface
      */
     public function getSchemaObject($name);
 }
+```
