--- a/java/JVM/5.介绍GC的设置参数，并分析相关的案列/JMeter/2.docker-tomat.md
+++ b/java/JVM/5.介绍GC的设置参数，并分析相关的案列/JMeter/2.docker-tomat.md
@@ -1,8 +1,7 @@
 
 ```sh
-### docker 准备
+### 1 内部修改
 docker pull tomcat:7
-docker run -it --name=tomcat7 -d -p 8888:8080 tomcat:7
 docker exec -it tomcat7 bash
 # docker run --rm -e JAVA_OPTS='-Xmx1g' tomcat
 ### 查看发行版本
@@ -20,6 +19,53 @@ cat >/usr/local/tomcat/conf/tomcat-users.xml<<EOF
     <user username="admin" password="admin" roles="admin-gui,admin,manager-gui,manager"/>　
 </tomcat-users>
 EOF
+
+### 2 外部挂载
+mkdir -p /opt/tomcat/conf/
+cat >/opt/tomcat/conf/tomcat-users.xml<<EOF
+<?xml version='1.0' encoding='utf-8'?>
+<tomcat-users>
+    <role rolename="manager"/>　  
+    <role rolename="manager-gui"/>　  
+    <role rolename="admin"/>　  
+    <role rolename="admin-gui"/>　  
+    <user username="admin" password="admin" roles="admin-gui,admin,manager-gui,manager"/>　
+</tomcat-users>
+EOF
+### 串行回收器
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx32M -Xms32M -XX:+HeapDumpOnOutOfMemoryError -XX:+UseSerialGC -XX:PermSize=32M' \
+  tomcat:7
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx512M -Xms90M -XX:+UseSerialGC -XX:PermSize=32M' \
+  tomcat:7
+### 扩大堆
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx512M -XX:PermSize=32M' \
+  tomcat:7
+### 调整初始堆大小
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx512M -Xms90M -XX:PermSize=32M' \
+  tomcat:7
+### ParrellOldGC回收器
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx512M -Xms90M -XX:+UseParallelGC -XX:+UseParallelOldGC -XX:ParallelGCThreads=4 -XX:PermSize=32M' \
+  tomcat:7
+### UseParNewGC  
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx512M -Xms90M -XX:+UseParNewGC -XX:PermSize=32M' \
+  tomcat:7
+### CMS
+docker run -it --name=tomcat7 -d -p 8888:8080 \
+  -v /opt/tomcat/conf/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml \
+  -e JAVA_OPTS='-Xloggc:gc.log -XX:+PrintGCDetails -Xmx512M -Xms90M -XX:+UseConcMarkSweepGC -XX:PermSize=32M' \
+  tomcat:7
 ```
 
 
