--- a/gitstats/2.git history statistics generator.md
+++ b/gitstats/2.git history statistics generator.md
@@ -30,18 +30,9 @@ Getting GitStats
 
 GitStats repository is hosted on both GitHub and Gitorious.
 
-Using git
-
+## Using git
 The recommended way to get GitStats is to clone it with git:
-
 git clone git://github.com/hoxu/gitstats.git
-The repository also contains the web site in the web branch.
-
-As a tarball
-
-Alternatively, you can download a tarball of the latest version.
-
-Distro packaging
 
 ### Debian
 If you are running Debian Squeeze, Wheezy or Sid, you can install gitstats with:
